--- a/assignment 2/docker-compose.yml
+++ b/assignment 2/docker-compose.yml
@@ -1,27 +1,26 @@
 version: '2'
 
 services:
-
-  drupal:
+  data:
     build: .
     ports:
       - 8080:80
     volumes:
-      - web-modules:/var/www/html/modules
-      - web-profiles:/var/www/html/profiles
-      - web-themes:/var/www/html/themes
-      - web-sites:/var/www/html/sites
+      - mods:/var/www/html/modules
+      - profile:/var/www/html/profiles
+      - theme:/var/www/html/themes
+      - site:/var/www/html/sites
 
-  postgres:
+  sql:
     image: postgres:12.1
     environment:
       POSTGRES_PASSWORD: devops
     volumes:
-      - web-data:/var/lib/postgresql/data
+      - sqldata:/var/lib/postgresql/data
 
 volumes:
-  web-data:
-  web-modules:
-  web-profiles:
-  web-themes:
-  web-sites:
+  sqldata:
+  site:
+  theme:
+  profile:
+  mods:
